# IITKBucks-assignments

./: README.md
Assignment1/: README.md  findnonce.hs
Assignment2/: generateKeys.hs
Go_Assignment7/: go.mod
Go_Assignment7/cmd/assignment7/: main.go
Go_Assignment7/controllers/: handlers.go  miner.go  router.go
Java_Assignment6/: App.java  README.md
Java_Assignment7/: App.java  README.md
Rust_Assignment6/: Cargo.toml
Rust_Assignment6/src/: main.rs
