[package]
name = "assignment_6"
version = "0.1.0"
authors = ["Priydarshi Singh <dryairship@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
serde = {version = ">=1.0", features = ["derive"]}
serde_json = ">=1.0"
